--- a/dev/index.html
+++ b/dev/index.html
@@ -423,7 +423,7 @@
 				</h2>
 				<div class="why__box q">
 					<img src="img/man.png" alt="" class="why__pic">
-					<div class="why__item">
+					<div class="why__item why__item_1">
 						<div class="why__name q">
 							Продажа автомобиля <br>
 							своими силами
@@ -454,7 +454,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="why__item">
+					<div class="why__item why__item_2">
 						<div class="why__name q">
 							<img src="img/z3.svg" alt="">
 							<span> Юнити Авто</span>
